Moved classes to packages

--- a/README
+++ b/README
@@ -1,7 +1,14 @@
 Description:
-============
+++++++++++++
 This is a test application that I use to try out various Mock Frameworks.
 
 Change log:
-===========
-Version 0.01: Initial release using Mockito Only
++++++++++++
+
+Version 0.01:
+=============
+First version with in memory repository and the following transactions:
+    => Create Product
+    => Update Product
+    => Delete Product
+    => Export Products 
