--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,8 @@ Rough idea:
 => Transactions:
 	=> Create product
 	=> Update product
-	=> Delete product 
+	=> Delete product
+	=> Export products
 
 Method:
 =======
@@ -18,11 +19,15 @@ Method:
 
 TO DO:
 ======
-=> [TODO] Clean up the interface SourceReader
-=> [TODO] Parse the XML Element from XmlSourceReader
-=> [TODO] Factor out a BaseSourceReader test fixture to test generic behaviour
-=> [TODO] Refactor to a more canonical form of constructor parameters for Transactions
-=> [TODO] Use packages to organise the code
-=> [DONE] Read transactions from an XML file
-=> [DONE] Refactor the TransactionReader to be independent of the Input source and Parser
-=> [DONE] Read transactions from a text file
+=> Use packages to organise the code
+=> Implement the CreateProduct Transaction
+=> Implement the UpdateProduct Transaction
+=> Implement the DeleteProduct Transaction 
+=> Implement the ExportProducts Transaction
+DONE:
+=====
+=> Parse the XML Element from XmlSourceReader
+=> Refactor to a more canonical form of constructor parameters for Transactions
+=> Read transactions from an XML file
+=> Refactor the TransactionReader to be independent of the Input source and Parser
+=> Read transactions from a text file
