--- a/todo.txt
+++ b/todo.txt
@@ -18,10 +18,8 @@ Method:
 
 TO DO:
 ======
-=> Implement the CreateProduct Transaction
-=> Implement the UpdateProduct Transaction
-=> Implement the DeleteProduct Transaction 
-=> Add validations
+=> Add validations to the transactions
+
 DONE:
 =====
 => Use packages to organise the code
